static/css/style.css
/* ... */
.navbar-before-scroll .nav-link,
.navbar-before-scroll .navbar-toggler-icon {
    color: var(--blue-color);
    letter-spacing: 1.5px;
}

.navbar-after-scroll {
    background-color: var(--white-color);
    box-shadow:
        0px 1.5px 2.2px rgba(0, 0, 0, 0.02),
        0px 3.7px 5.3px rgba(0, 0, 0, 0.028),
        0px 7px 10px rgba(0, 0, 0, 0.035),
        0px 12.5px 17.9px rgba(0, 0, 0, 0.042),
        0px 23.4px 33.4px rgba(0, 0, 0, 0.05),
        0px 56px 80px rgba(0, 0, 0, 0.07);
    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
}

.navbar-toggler {
    border-radius: 100%;
    border: none;
    background-color: var(--yellow-color);
}

.navbar-toggler:focus {
    box-shadow: none;
}

.navbar-toggler i {
    padding: 5px;
}

.nav-link:hover {
    text-decoration: underline;
    text-underline-offset: 10px;
    text-decoration-thickness: 2px;
    text-decoration-color: var(--orange-color);
}

.logo {
    border: 2px solid;
    padding: 5px;
    margin: 0 auto;
    border-color: var(--blue-color);
    -webkit-box-shadow: 4px 4px 0px 0px var(--orange-color);
    -moz-box-shadow: 4px 4px 0px 0px var(--orange-color);
    box-shadow: 4px 4px 0px 0px var(--orange-color);
    letter-spacing: 3px;
    font-family: var(--font-title);
    transform: translateX(-50%);
    left: 50%;
    position: absolute;
}

.africa-icon {
    color: var(--orange-color);
}

.nav-item {
    list-style: none;
}

.nav-icon:hover {
    text-decoration: underline;
    text-underline-offset: 10px;
    text-decoration-thickness: 2px;
    text-decoration-color: var(--orange-color);
}

.nav-item hr {
    max-width: 100%;
    border-width: 0 0 4px;
    margin: .2rem
}

.dropdown-item {
    color: var(--blue-color);
}

.dropdown-item:hover,
.dropdown-item:active {
    background-color: var(--white-color);
    color: var(--dark-blue-color);
}

.dropdown-menu {
    background-color: var(--white-color);
}

.profile-img-small {
    max-width: 40px !important;
    max-height: 40px !important;
}

.alert-box {
    position: fixed;
    top: 5em;
    right: 0;
    left: 0;
    z-index: 2;
}


/*=============== Footer ===============*/
.footer {
    background-color: var(--white-color);
    color: var(--blue-color);
}

.footer-text,
.social-text {
    padding: 15px 40px;
}

.footer-text h3,
.social-text h3 {
    padding-bottom: .3rem;
}

.footer-text {
    font-size: large;
}

.copyright {
    font-size: small;
}

.social {
    list-style: none;
}

.social li {
    margin-bottom: .5em;
}

.social a {
    color: var(--blue-color);
    text-decoration: none;
}

.social-icon {
    padding: 8px;
    margin-right: 4px;
    background-color: var(--orange-color);
    border-radius: 50%;
}

/*=============== Homepage ===============*/
.search-results-container {
    min-height: 80vh;
}

/*--------------- Hero section ---------------*/

.bg-setup {
    background-position: center;
    background-repeat: no-repeat !important;
    background-size: cover !important;
    -webkit-transition: none;
    -o-transition: none;
    transition: none;
    z-index: 1;
}

.hero-content {
    padding: 0;
    top: 60%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    background: url(//s2.svgbox.net/pen-brushes.svg?ic=brush-1&color=faebd7f0);
    margin: -2px -6px;
    width: fit-content;
    padding: 3rem 3.5rem;
    position: absolute;
    right: 15%;
    left: 15%;
    text-align: center;
}

.hero-content h1 {
    color: var(--blue-color);
    text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.6);
    font-size: 60px;
}

.hero-text {
    color: var(--blue-color);
}

.overlay {
    background-color: var(--white-color);
    position: absolute;
    height: 100%;
    width: 100%;
    bottom: 0;
    left: 0;
    opacity: 0.2;
}

.carousel-bg-1 {
    background-image: url("https://res.cloudinary.com/db0ufjm4a/image/upload/v1677599855/u4molqytglxuzliqtahb.webp");
}

.carousel-bg-2 {
    background-image: url("https://res.cloudinary.com/db0ufjm4a/image/upload/v1677599854/my98c9lcximuhl67hcfs.webp");
}

.carousel-bg-3 {
    background-image: url("https://res.cloudinary.com/db0ufjm4a/image/upload/v1677599854/pf75ukq1s2yrqhm6bywv.webp")
}

.carousel-item {
    height: 100vh;
}

.btn-highlights {
    padding: .8em;
    text-transform: uppercase;
    letter-spacing: 1.6px;
    transition: all .2s ease;
}

.btn-highlights:hover {
    font-size: 110%;
}

/*--------------- Featured section ---------------*/
.img-featured {
    width: 100%;
    height: 100%;
    margin-bottom: 15px;
    object-fit: cover;
    object-position: 100% 0;
}

.content .content-img {
    overflow: hidden;
    border-radius: 10px;
    -webkit-transition: all 0.9s ease;
    -moz-transition: all 0.9s ease;
    -ms-transition: all 0.9s ease;
    -o-transition: all 0.9s ease;
    transition: all 0.9s ease;
}

.content .content-img:hover {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
}

.content .content-img img {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    cursor: pointer;
    transition: all .9s ease;
    -webkit-transition: all .9s ease;
    -moz-transition: all .9s ease;
    -o-transition: all .9s ease;
    -ms-transition: all .9s ease;
}

.content .content-img img:hover {
    -webkit-transform: scale(1.15);
    -moz-transform: scale(1.15);
    -ms-transform: scale(1.15);
    -o-transform: scale(1.15);
    transform: scale(1.15);
}

.content .content-img:hover .content-post-title h4 {
    color: var(--white-color);
}

.content .col-md-8,
.content .col-md-4 .content-img {
    margin-bottom: 15px;
}

.content .col-md-8 .content-img {
    position: relative;
    height: 100%;
}

.content .col-md-4 .content-img {
    position: relative;
}
/* ... */

